--- a/web.html
+++ b/web.html
@@ -8,7 +8,7 @@
     <body>
         <div>
             <h1>
-                Mi primer pagina web.
+                Mi primer pagina web en Platzi.
             </h1>
         </div>
     </body>
